tests/architecture/fixtures/invalid/order-command-boundaries/application-framework.ts
import React from "react";
import { QueryClient } from "@tanstack/react-query";

export const invalidApplicationFramework = [React, QueryClient];
